REGRESSION (248692@main?): [iOS] ASSERTION FAILED: m_layer->owner()->platformCALayerDelegatesDisplay(m_layer) in WebKit::RemoteLayerBackingStore::paintContents() https://bugs.webkit.org/show_bug.cgi?id=238277 <rdar://problem/90715046>

Reviewed by Tim Horton.

Empty backing store (height or width of zero) never need display; ImageBuffer allocation
with empty sizes always returns null anyway.

* Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::needsDisplay const):
* Shared/RemoteLayerTree/RemoteLayerBackingStoreCollection.mm:
(WebKit::RemoteLayerBackingStoreCollection::backingStoreNeedsDisplay):
* Shared/RemoteLayerTree/RemoteLayerWithRemoteRenderingBackingStoreCollection.mm:
(WebKit::RemoteLayerWithRemoteRenderingBackingStoreCollection::backingStoreNeedsDisplay):


Canonical link: https://commits.webkit.org/248808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291780 268f45cc-cd09-0410-ab3c-d52691b4dbfc